# 2D_Field_of_view

./: CMakeLists.txt
include/: structs.h  vector.h
src/: ft_vecdot.c  ft_veclen.c  ft_vecnorm.c  ft_vecscale.c  ft_vecsphereinter.c  ft_vecsum.c  main.c
